<resources>
    <string name="app_name">SDK Sample</string>

    <string name="page_title">Qattah Pay Sample Application</string>
    <string name="page_instructions">This application is for showing the technical integration in Android to request a new Qattah Pay order. \n As a user I will reach this page after selecting my products that I want to purchase and then click on \'Pay with Qattah\'</string>
    <string name="pay_with_qattah_pay">Pay with Qattah Pay</string>
    <string name="put_the_amount">Put the reference id, callback URL, and amount of the order for the simulation of user\'s Qattah Payment cycle</string>
    <string name="hint">120.00</string>
    <string name="sar">SAR</string>
    <string name="loading">Loading…</string>
    <string name="https_webhook_qattahpay_sa">http://161.35.70.189:3000/payment-status/callback</string>
    <string name="ord_1300">ord_1300</string>
    <string name="currency">Currency</string>
    <string name="example_email_com">example@email.com</string>
    <string name="product_description">product description</string>
    <string name="_01234567890">01234567890</string>
</resources>